[package]
name = "dlfcn"
version = "0.1.0"
authors = ["Mariell \"Proximyst\" Hoversholm <proximyst@proximyst.com>"]
description = "DLFCN wrapper for Rust using libc."
keywords = ["dynlib", "dynamic", "load", "library", "dlsym"]
repository = "https://github.com/Proximyst/dlfcn"
license = "Creative Commons Zero v1.0 Universal"
license-file = "LICENCE"
documentation = "https://docs.rs/dlfcn"

[dependencies.libc]
version = "0.2"
